rust/cube/cubeplanner/tests/snapshots/dialects__crate_by_month.snap
---
source: cubeplanner/tests/dialects.rs
expression: "by_month(Dialect :: Crate).sql"
---
SELECT date_trunc('month', ("orders".created_at::timestamptz AT TIME ZONE 'UTC')) "orders__created_at_month", count("orders".id) "orders__count" 
FROM  (SELECT * FROM public.orders WHERE (created_at >= $1::timestamptz AND created_at <= $2::timestamptz) AND 1 = 1
)  AS "orders"
WHERE ("orders".created_at >= $3::timestamptz AND "orders".created_at <= $4::timestamptz)
GROUP BY 1
ORDER BY  1  ASC
